--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-*              text=auto eol=lf
+*              text=auto
 *.rs           text diff=rust
+*.toml         text
 .gitignore     text
 .gitattributes text
