--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
-*              text=auto
+*              text=auto eol=lf
 *.rs           text diff=rust
 *.toml         text
+*.lock         text
 .gitignore     text
 .gitattributes text
